[project]
name = "sweetcake"
version = "0.1.0"
description = "Sweet Cake - Repostería Artesanal"
requires-python = ">=3.12.5"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "astroid==3.3.4",
    "black==24.8.0",
    "boto3==1.34.91",
    "botocore==1.34.91",
    "dj-database-url==2.1.0",
    "Django==4.2",
    "django-ses==4.0.0",
    "django-storages==1.14.2",
    "django-widget-tweaks==1.5.0",
    "gunicorn==22.0.0",
    "psycopg2-binary==2.9.9",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-django==4.9.0",
    "python-dotenv==1.0.1",
    "python-slugify==8.0.4",
    "whitenoise==6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sweetcake.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = ["R", "C", "W1203"]

[tool.pylint.django]
django-settings-module = "sweetcake.settings"
load-plugins = ["pylint_django"]
